2012-08-13  Markus Trippelsdorf  <markus@trippelsdorf.de>

	* sysdeps/x86_64/fpu/libm-test-ulps: Update.

2012-08-13  Jeff Law <law@redhat.com>

	* manual/stdio.texi (snprintf): Clarify handling of the trailing
	null byte in the output string.

2012-08-10  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__LINUX_ARG_MAX_STACK_BASED_MIN_KERNEL): Define.
	[__LINUX_KERNEL_VERSION >= __LINUX_ARG_MAX_STACK_BASED_MIN_KERNEL]
	(__ASSUME_ARG_MAX_STACK_BASED): Define.
	* sysdeps/unix/sysv/linux/sysconf.c (__sysconf)
	[__LINUX_KERNEL_VERSION < 0x020617]: Change condition to
	!__ASSUME_ARG_MAX_STACK_BASED.  Compare version with
	__LINUX_ARG_MAX_STACK_BASED_MIN_KERNEL.

2012-08-09  Jeff Law <law@redhat.com>

	[BZ #13939]
	* malloc.c/arena.c (reused_arena): New parameter, avoid_arena.
	When avoid_arena is set, don't retry in the that arena.  Pick the
	next one, whatever it might be.
	(arena_get2): New parameter avoid_arena, pass through to reused_arena.
	(arena_lock): Pass in new parameter to arena_get2.
	* malloc/malloc.c (__libc_memalign): Pass in new parameter to
	arena_get2.
	(__libc_malloc): Unify retrying after main arena failure with
	__libc_memalign version.
	(__libc_valloc, __libc_pvalloc, __libc_calloc): Likewise.

2012-08-09  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14166]
	* sysdeps/i386/i686/multiarch/strstr-c.c (strstr): Redefined
	to __redirect_strstr.
	(__strstr_sse42): Use typeof __redirect_strstr.
	(__strstr_ia32): Likewise.
	(__libc_strstr): New prototype.
	(strstr): Renamed to ...
	(__libc_strstr): This.
	(strstr): New strong alias of __libc_strstr.
	* sysdeps/x86_64/multiarch/strstr-c.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/time.c (time): Redefined to
	__redirect_time.
	Include <time.h>.
	(__libc_time): New prototype.
	(time_ifunc): Replace time with __libc_time.
	(time): New strong alias and hidden definition of __libc_time.
	(__GI_time): Remove strong alias.